<resources>
    <string name="app_name">Checkers</string>

    <string name="menu_newgame">New Game</string>
    <string name="menu_continue">Continue</string>
    <string name="menu_options">Options</string>

    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

    <string name="black_pieces">BLACK</string>
    <string name="white_pieces">WHITE</string>

    <string name="time_chose">TIMER</string>

    <string name="start_game">START GAME</string>

</resources>
