<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/menu_main_title"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"

        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />


    <Button
        android:id="@+id/menu_newgame_btn"

        android:layout_width="250dp"
        android:layout_height="70dp"

        android:text="@string/menu_newgame"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/menu_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menu_continue_btn"
    />

    <Button
            android:id="@+id/menu_continue_btn"

            android:layout_width="250dp"
            android:layout_height="70dp"

            android:text="@string/menu_continue"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/menu_newgame_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/menu_options_btn"
    />

    <Button
            android:id="@+id/menu_options_btn"

            android:layout_width="250dp"
            android:layout_height="70dp"


            android:text="@string/menu_options"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textAlignment="center"

            app:layout_constraintTop_toBottomOf="@id/menu_continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>