<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SetNewGame">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newgame_menu_container"

            android:visibility="visible"

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
android:id="@+id/newgame_title"

android:layout_width="0dp"
android:layout_height="100dp"
android:gravity="center"

android:textSize="30sp"
android:textColor="@android:color/black"
android:text="@string/menu_newgame"
android:textAlignment="center"

app:layout_constraintTop_toTopOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newgame_select"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/newgame_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newgame_start_button"
        >



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newgame_player1_container"

                android:layout_width="160dp"
                android:layout_height="100dp"
                android:orientation="vertical"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/newgame_player2_container">

                <TextView
                    android:id="@+id/newgame_p1_title"
                    android:text="@string/player_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"

                    style="@style/paddern_title_basic"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                />

                <RadioGroup
                    android:id="@+id/newgame_select_group_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:gravity="center"

                    app:layout_constraintTop_toBottomOf="@id/newgame_p1_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                        <RadioButton
                            android:id="@+id/white_1"
                            android:layout_width="80dp"
                            android:layout_height="25dp"

                            android:checked="true"

                            android:text="@string/white_pieces"
                            android:buttonTint="@color/colorPrimaryDark"
                        />

                        <RadioButton
                                android:id="@+id/black_1"
                                android:layout_width="80dp"
                                android:layout_height="25dp"

                                android:text="@string/black_pieces"
                                android:buttonTint="@color/colorPrimaryDark"
                        />

                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/newgame_player2_container"

                    android:layout_width="160dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"

                    app:layout_constraintStart_toEndOf="@id/newgame_player1_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/newgame_p2_title"
                        android:text="@string/player_2"
                        android:layout_width="0dp"
                        android:layout_height="50dp"

                        style="@style/paddern_title_basic"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />

                <TextView
                    android:id="@+id/newgame_p2_choice"

                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:text="@string/black_pieces"
                    style="@style/paddern_title_basic"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newgame_p2_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/newgame_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"


                android:layout_marginTop="50dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newgame_player1_container">


                <TextView
                    android:id="@+id/newgame_timer_title"

                    android:text="@string/time_chose"
                    style="@style/paddern_title_basic"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Switch
                    android:id="@+id/newgame_timer_switch"

                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


            <TextView
                android:id="@+id/title_timer_01"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="0:00"
                app:layout_constraintStart_toStartOf="@id/newgame_progressbar_timer"
                app:layout_constraintBottom_toTopOf="@id/newgame_progressbar_timer"
            />
            <TextView
                    android:id="@+id/title_timer_02"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="20:00"
                    app:layout_constraintEnd_toEndOf="@id/newgame_progressbar_timer"
                    app:layout_constraintBottom_toTopOf="@id/newgame_progressbar_timer"
            />


            <ProgressBar
                android:id="@+id/newgame_progressbar_timer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:progress="50"

                android:layout_marginTop="40dp"

                app:layout_constraintTop_toBottomOf="@id/newgame_timer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
                android:id="@+id/newgame_start_button"

                android:layout_width="0dp"
                android:layout_height="90dp"

                android:text="@string/start_game"
                style="@style/paddern_title_basic"

                app:layout_constraintTop_toBottomOf="@id/newgame_select"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newgame_loading_view"

        android:visibility="gone"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
















